# democode

./: .clang-tidy  CHANGELOG.md  CMakeLists.txt  README.md
fire/: CMakeLists.txt  demoapp.hpp  firedemo.cpp  firedemo.hpp  main.cpp
include/: demoapp.hpp
plasma/: CMakeLists.txt  main.cpp  plasmademo.cpp  plasmademo.hpp
xor/: CMakeLists.txt  main.cpp  xordemo.cpp  xordemo.hpp
